pkg now is module for local import
updated swagger docs and comments
added cfg.env file
