# good/docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Service for interactions with user's money accounts",
+        "description": "CRUD API for goods db",
         "title": "Good",
         "contact": {
             "name": "Developer",
@@ -9,14 +9,56 @@
         },
         "license": {
             "name": "MIT",
-            "url": "https://github.com/kolesnikoff17/avito_tech_internship/blob/main/LICENSE"
+            "url": "https://github.com/kolesnikoff17/orders-goods/blob/main/LICENSE"
         },
         "version": "1.0"
     },
     "host": "localhost:8080",
     "basePath": "/v1",
     "paths": {
-        "/order": {
+        "/good": {
+            "get": {
+                "description": "return order with given id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "good"
+                ],
+                "summary": "getByID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "good id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Good"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "creates new good in repo",
                 "consumes": [
@@ -36,7 +78,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.goodPostRequest"
+                            "$ref": "#/definitions/mw.GoodRequestBody"
                         }
                     }
                 ],
@@ -62,8 +104,59 @@
                 }
             }
         },
-        "/order/{id}": {
+        "/good/{id}": {
             "put": {
+                "description": "update order with given id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "good"
+                ],
+                "summary": "updateGood",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "good id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "new good data",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/mw.GoodRequestBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.emptyJSONResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    }
+                }
+            },
+            "delete": {
                 "description": "deletes good",
                 "consumes": [
                     "application/json"
@@ -108,16 +201,36 @@
         }
     },
     "definitions": {
-        "v1.emptyJSONResponse": {
-            "type": "object"
+        "entity.Good": {
+            "type": "object",
+            "properties": {
+                "additional": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "category": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "string"
+                }
+            }
         },
-        "v1.goodPostRequest": {
+        "mw.GoodRequestBody": {
             "type": "object",
             "required": [
                 "category",
-                "name"
+                "name",
+                "price"
             ],
             "properties": {
+                "additional": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
                 "category": {
                     "type": "string",
                     "example": "Food"
@@ -125,31 +238,21 @@
                 "name": {
                     "type": "string",
                     "example": "Ice cream"
+                },
+                "price": {
+                    "type": "string",
+                    "example": "200"
                 }
             }
+        },
+        "v1.emptyJSONResponse": {
+            "type": "object"
         },
         "v1.goodPostResponse": {
             "type": "object",
             "properties": {
                 "id": {
                     "type": "string"
-                }
-            }
-        },
-        "v1.goodPutRequest": {
-            "type": "object",
-            "required": [
-                "category",
-                "name"
-            ],
-            "properties": {
-                "category": {
-                    "type": "string",
-                    "example": "Transport"
-                },
-                "name": {
-                    "type": "string",
-                    "example": "Bicycle"
                 }
             }
         },
